# pydipapi

./: .gitignore  .pre-commit-config.yaml  BUG_REPORT.md  CHANGELOG.md  IMPLEMENTIERUNG_ZUSAMMENFASSUNG.md  LICENSE  MANIFEST.in  Makefile  OFFENE_PUNKTE.md  PROJECT_STATUS.md  PROJEKTINSPEKTION.md  PROJEKT_ANALYSE.md  PUBLISHING.md  README.md  README_DE.md  ROADMAP.md  VERBESSERUNGSVORSCHLAEGE.md  bandit_report.json  core  mkdocs.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml
Notebook/: dip-api.ipynb
UnitTest/: UnitTest.py  __init__.py
docs/: api_reference.md  changelog.md  content_parsers.md  developer_guide.md  development.md  index.md  notebooks.md  openapi.md  openapi_spec.md  publishing.md  roadmap.md  testing.md  usage.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
examples/: advanced_usage.py  async_example.py  content_parsers_example.py  example_basic.py  protocol_parser_demo.py
notebooks/: 01_basic_usage.ipynb  02_filtering_and_search.ipynb  03_batch_operations_and_caching.ipynb  04_content_parsers.ipynb  05_async_api_tutorial.ipynb  06_data_visualization.ipynb  IMPROVEMENT_PLAN.md  README.md
pydipapi/: __init__.py  api.py  async_api.py  openapi.yaml  py.typed  type.py
pydipapi/client/: __init__.py  async_client.py  base_client.py  pagination.py
pydipapi/parsers/: __init__.py  activity_parser.py  base_parser.py  document_parser.py  person_parser.py  protocol_parser.py  protocol_xml_parser.py
pydipapi/util/: __init__.py  cache.py  error_handler.py  error_handling.py
tests/: __init__.py  test_api.py  test_async_api.py  test_coverage.py  test_integration.py  test_integration_mock.py  test_parsers.py
tests/fixtures/: plenarprotokoll_min.xml
